# torch_ga

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
benchmarks/: README.md  generate.py  test_torchga.py
notebooks/: clifford.ipynb  conv.ipynb  em.ipynb  keras-triangles.ipynb  pga.ipynb  pytorchga.ipynb  qed.ipynb
tests/: test_dual_cayley.py  test_dual_ga.py  test_keras.py  test_pga.py  test_pytorch_clifford.py  test_pytorch_ga.py  test_sta_cayley.py
torch_ga/: __init__.py  __version__.py  blades.py  jacobian.py  layers.py  layers_v0.py  mv.py  mv_ops.py  plots.py  torch_ga.py  transform.py  utils.py
torch_ga/clifford/: __init__.py  algebra.py  blades.py
